--- a/cec/classwork/24-03-10.md
+++ b/cec/classwork/24-03-10.md
@@ -3,9 +3,11 @@ title: "[作業] 基礎Markdown使用教學"
 author: "114級電機社 (第一屆) - HeyLoon"
 desc: "在🐔社出生的馬克大奧聖經🫶"
 date: 2024-03-10
-tags: [教材, 第一屆歷史資料, 中文]
+tags: [作業, 第一屆歷史資料, 中文]
 unlisted: true
 ---
+
+[教材本文](/post/material/markdown)
 
 請參考下列的文章，用Markdown的格式做重點整理，盡量多試試各種元素:D  
 [山本理顯 - Wikipedia](https://zh.wikipedia.org/wiki/%E5%B1%B1%E6%9C%AC%E7%90%86%E6%98%BE)
