add `lang` field for markdown

--- a/cec/classwork/24-03-10.md
+++ b/cec/classwork/24-03-10.md
@@ -3,7 +3,7 @@ title: "[作業] 基礎Markdown使用教學"
 author: "114級電機社 (第一屆) - HeyLoon"
 desc: "在🐔社出生的馬克大奧聖經🫶"
 date: 2024-03-10
-tags: [作業, 第一屆歷史資料, 中文]
+tags: [作業, 第一屆歷史資料]
 unlisted: true
 ---
 
